--- a/docs/specification/appx-instr_syntax.tex
+++ b/docs/specification/appx-instr_syntax.tex
@@ -159,5 +159,24 @@ Class                 & Syntax                     & Section                    
 \caption{An overview of instruction syntax, including reference to associated semantics: class $3.1$, per \REFSEC{sec:spec:instruction:3:1}.}
 \label{tab:instr_syntax:3:1}
 \end{table}                                                                      
+% -----------------------------------------------------------------------------
+
+\begin{table}[!ht]
+\begin{center}
+\begin{tabular}{|c|l|l|}
+\hline                                                                             
+Class                 & Syntax                     & Section                                    \\
+\hline\hline                                                                         
+\multirow{ 2}{*}{3.1} & \XCSYNTAXUSE{xc.sha3.xy}    & \REFSEC{sec:spec:instruction:xc.sha3.xy}    \\
+                      & \XCSYNTAXUSE{xc.sha3.x1}    & \REFSEC{sec:spec:instruction:xc.sha3.x1}    \\
+                      & \XCSYNTAXUSE{xc.sha3.x2}    & \REFSEC{sec:spec:instruction:xc.sha3.x2}    \\
+                      & \XCSYNTAXUSE{xc.sha3.x4}    & \REFSEC{sec:spec:instruction:xc.sha3.x4}    \\
+                      & \XCSYNTAXUSE{xc.sha3.yx}    & \REFSEC{sec:spec:instruction:xc.sha3.yx}    \\
+\hline                                                                             
+\end{tabular}
+\end{center}
+\caption{An overview of instruction syntax, including reference to associated semantics: class $3.2$, per \REFSEC{sec:spec:instruction:3:2}.}
+\label{tab:instr_syntax:3:1}
+\end{table}                                                                      
 
 % =============================================================================
