--- a/docs/specification/spec-instruction.tex
+++ b/docs/specification/spec-instruction.tex
@@ -385,7 +385,7 @@
 
 % -----------------------------------------------------------------------------
 
-\XCINSTR{xc.mix.l}{rd, rs1, rs2, rtamt}{
+\XCINSTR{xc.mix.l}{crd, crs1, crs2, rtamt}{
   Form a result by mix together bits from two operands based on a mask:
   the instruction essentially computes  
   \[
@@ -403,7 +403,7 @@
 }{
   $t \ASN \XCR[*][{\VERB[RV]{crs1}}] \OP[32][u]{\RRT}   \VERB[RV]{rtamt}       $ \;
   \For{$i = 0$ {\bf upto} $31$}{
-    \If{$\INDEX{\XCR[*][{\VERB[RV]{rs2}}]}{i} = 1$}{
+    \If{$\INDEX{\XCR[*][{\VERB[RV]{crs2}}]}{i} = 1$}{
       $\INDEX{\XCR[*][{\VERB[RV]{crd}}]}{i} \ASN \INDEX{t}{i}$
     }
   }
@@ -411,7 +411,7 @@
 
 % -----------------------------------------------------------------------------
 
-\XCINSTR{xc.mix.h}{rd, rs1, rs2, rtamt}{
+\XCINSTR{xc.mix.h}{crd, crs1, crs2, rtamt}{
   Form a result by mix together bits from two operands based on a mask:
   the instruction essentially computes  
   \[
@@ -429,7 +429,7 @@
 }{
   $t \ASN \XCR[*][{\VERB[RV]{crs1}}] \OP[32][u]{\RRT} ( \VERB[RV]{rtamt} + 16 )$ \;
   \For{$i = 0$ {\bf upto} $31$}{
-    \If{$\INDEX{\XCR[*][{\VERB[RV]{rs2}}]}{i} = 1$}{
+    \If{$\INDEX{\XCR[*][{\VERB[RV]{crs2}}]}{i} = 1$}{
       $\INDEX{\XCR[*][{\VERB[RV]{crd}}]}{i} \ASN \INDEX{t}{i}$
     }
   }
