Fix #66 - xc.ext and xc.ins syntax in specification
The ASM syntax specification for the ext and ins instructions was
unclear as it implied the programmer should compensate for a
transformation actually performed by hardware.

 On branch master
 Your branch is up-to-date with 'origin/master'.

 Changes to be committed:
	modified:   docs/specification/spec-instruction.tex

--- a/docs/specification/spec-instruction.tex
+++ b/docs/specification/spec-instruction.tex
@@ -361,7 +361,7 @@
 
 % -----------------------------------------------------------------------------
 
-\XCINSTR{xc.ext}{crd, crs, cs, cl}{
+\XCINSTR{xc.ext}{crd, crs, lo, hi}{
   Extract a contiguous sequences of $2$-bit crumbs 
   from             one $\XCR$ register, and
   insert them as the LSBs in another $\XCR$ register.
@@ -373,7 +373,7 @@
 
 % -----------------------------------------------------------------------------
 
-\XCINSTR{xc.ins}{crd, crs, cs, cl}{
+\XCINSTR{xc.ins}{crd, crs, lo, hi}{
   Extract a contiguous sequences of $2$-bit crumbs 
   from the LSBs of one $\XCR$ register, and
   insert   them           in another $\XCR$ register.
