--- a/docs/specification/appx-related.tex
+++ b/docs/specification/appx-related.tex
@@ -1,14 +1,17 @@
 % =============================================================================
 
-\subsection*{Processor/co-processor/accelerator design}
+\subsection*{General}
 \cite{SCARV:Gutmann:00}
 \cite{SCARV:WuWeaAus:01}
 \cite{SCARV:MTRGS:99}
 \cite{SCARV:GGHJPTW:11}
 \cite{SCARV:CosLebDev:16}
 
-\subsection*{Cryptography- or security-specific processor design}
-\cite{SCARV:FouMoo:05,SCARV:Fournier:07,SCARV:KocSavGro:08,SCARV:TheSisPne:09,SCARV:TilKirSze:10,SCARV:NREAMM:12,SCARV:YumSav:15,SCARV:RagAmbPar:15,SCARV:AweAus:17,SCARV:YHEF:18}
+\subsection*{Cryptography- or security-specific: design and implementation}
+\cite{SCARV:FouMoo:05,SCARV:Fournier:07,SCARV:KocSavGro:08,SCARV:TheSisPne:09,SCARV:TilKirSze:10,SCARV:NREAMM:12,SCARV:YumSav:15,SCARV:RagAmbPar:15,SCARV:AweAus:17,SCARV:YHEF:18,SCARV:WJWDGSN:18}
+
+\subsection*{Cryptography- or security-specific: verification}
+\cite{SCARV:KZDN:18}
 
 \subsection*{ISEs: general/codesign/security/scheduling and code generation}
 \cite{SCARV:Fiskiran:05}
