Fixes #71 - Multi-precision instruction encodings.
- Re-organise multi-precision instruction encodings
- Corresponding updates to binutils (rebuild needed)
- Updates to the crd writes proof.
- Add note about proof timeouts to implementation document.

 On branch master
 Your branch is ahead of 'origin/master' by 3 commits.
   (use "git push" to publish your local commits)

 Changes to be committed:
	modified:   docs/implementation/verify.tex
	modified:   docs/ise-opcodes.txt
	modified:   external/riscv-binutils-gdb-2.30.patch
	modified:   verif/formal/fml_chk_register_writes_crd.v

--- a/docs/implementation/verify.tex
+++ b/docs/implementation/verify.tex
@@ -74,6 +74,9 @@ The high-level sequence of actions in the formal flow are shown in figure
 \item The final result is a set of N reports (1 per property context)
     detailing either the failing assertion(s) and corresponding traces,
     or a pass result.
+\item All proofs are run with a 10 hour automatic timeout.
+    Proofs which timeout without finding a counter example are treated
+    as a "qualified pass".
 \end{enumerate}
 
 All checks are run for atleast 10 cycles worth of design operation after
