Put git commit, branch and status into spec

--- a/doc/spec.tex
+++ b/doc/spec.tex
@@ -1,7 +1,10 @@
 \documentclass{scarv-report}
 
 \title{{\sc \XCRYPTO: a cryptographic ISE for RISC-V} \\ {\sc\large Specification Document}}
-\date{Version $\import{build/spec}{spec.version}$ (\today)}
+\date{
+    Version $\import{build/spec}{spec.version}$ (\today) \\
+    {\small \tt \import{build/spec}{spec.commit}}
+}
 \author{Ben Marshall}
 \author{Daniel Page}
 \author{Thinh Pham}
