--- a/doc/tex/spec-instruction.tex
+++ b/doc/tex/spec-instruction.tex
@@ -374,8 +374,6 @@ To ensure consistency, the instruction must adhere to the following rules
 \subsubsection{Class-$2.3$: bit-oriented}
 \label{sec:spec:instruction:2:3}
 
-% -----------------------------------------------------------------------------
-
 \XCRYPTOINSTR{xc.bop}{rd, rs1, rs2, l}{
   Compute each $1$-bit sub-word (i.e.,    bit) of an $\RVXLEN$-bit result
   via application of a function
@@ -793,7 +791,6 @@ in Appendix \REFSEC{sec:design:mpn}.
 
 % -----------------------------------------------------------------------------
 
-
 \XCRYPTOINSTR{xc.madd.3}{(rd2, rd1), rs1, rs2, rs3}{
   Compute a   register-based multi-precision (or ``long'') addition:
   one can interpret
@@ -897,6 +894,12 @@ in Appendix \REFSEC{sec:design:mpn}.
 
 % -----------------------------------------------------------------------------
 
+\subsubsection{Class-$2.6$: leakage}
+\label{sec:spec:instruction:2:6}
+
+% TODO: add FENL content
+
+% =============================================================================
 
 \subsubsection{Class-$3.1$: AES}
 \label{sec:spec:instruction:3:1}
@@ -984,7 +987,6 @@ in Appendix \REFSEC{sec:design:mpn}.
 }
 
 % -----------------------------------------------------------------------------
-
 
 \subsubsection{Class-$3.2$: SHA2}
 \label{sec:spec:instruction:3:2}
